fix: reduce header spacing

--- a/frontend/containers/Header/Header.css
+++ b/frontend/containers/Header/Header.css
@@ -7,7 +7,7 @@
 }
 
 .masthead {
-  padding: 13px 20px;
+  padding: 10px;
 }
 
 @media (--breakpoint-medium) {
